<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.joke.JokeFragment">

    <data>
        <import type="android.view.View"/>

        <variable
            name="joke"
            type="com.example.chucknorrisjokes.domain.model.joke.Joke" />

        <variable
            name="isLoading"
            type="java.lang.Boolean" />

        <variable
            name="isLoaded"
            type="java.lang.Boolean" />

        <variable
            name="isError"
            type="java.lang.Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:gravity="center">


        <TextView
            android:id="@+id/jokeFragmentCategoryTv"
            category="@{joke}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAlignment="center"
            android:textSize="32sp"
            android:visibility="@{isLoaded? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/jokeFragmentJokeTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jokeFragmentJokeTv"
            joke="@{joke}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/joke"
            android:textSize="20sp"
            android:visibility="@{isLoaded? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/jokeFragmentButtonsLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jokeFragmentCategoryTv" />

        <LinearLayout
            android:id="@+id/jokeFragmentButtonsLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="@{isLoaded? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jokeFragmentJokeTv">

            <Button
                android:id="@+id/jokeFragmentAddToFavoritesBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/add_to_favorites" />

            <Button
                android:id="@+id/jokeFragmentUpdateBtn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:text="@string/Next" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/jokeFragmentPb"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{isLoading? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/jokesFragmentErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error"
            android:visibility="@{isError? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toTopOf="@+id/jokesFragmentTryAgainBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/jokesFragmentTryAgainBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:visibility="@{isError? View.VISIBLE : View.GONE, default=gone}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jokesFragmentErrorText" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>